--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 #body-holder {
@@ -27,32 +28,53 @@ body {
 
 #header {
   width: 100%;
+  transition: 0.4s !important;
 }
 
-#header img:nth-of-type(1) {
+#back{
+  display: none;
+  opacity: 0;
+  margin-top: 1vh;
+  transition: 0.4s;
+}
+
+#logo {
   height: 4.2vh;
-  padding-right: 0.5vh;
+  padding: 0 0.5vh 0 0;
+  transition: 0.4s;
 }
 
 #header a:nth-of-type(1) {
   color: #8542c8;
   font-size: 5vh;
+  transition: 0.4s;
 }
 
-#header img:nth-of-type(2) {
+#settings {
   height: 5.8vh;
   cursor: pointer;
   border-radius: 50%;
-  transition: 0.2s;
+  transition: 0.4s;
 }
 
-#header img:nth-of-type(2):hover {
-  background-color: rgba(0, 0, 0, 0.07);
+#settings:hover {
+  background-color: #f5f5f5;
 }
 
-#index {
+#header div{
+  margin-top: 2vh;
+  width: 100%;
+  display: none;
+  transition: 0.4s;
+  opacity: 0;
+}
+
+.step {
   width: 100%;
   padding-top: 2vh;
+  margin-left: 100vw;
+  display: none;
+  transition: 0.4s;
 }
 
 .title {
@@ -72,16 +94,10 @@ body {
   border-radius: 50%;
 }
 
-#index div > div {
+#index div > img {
   margin-top: 4vh;
   height: 28vh;
   width: 28vh;
-  background-color: rgba(133, 66, 200, 0.2);
-}
-
-#index div > img:nth-of-type(1) {
-  width: 18vh;
-  height: 18vh;
 }
 
 .button {
@@ -95,11 +111,11 @@ body {
   text-align: left;
   padding-left: 2vh;
   margin-top: 4vh;
-  background-image: url("../img/arrowRight.png");
+  background-image: url("../img/rightArrow.svg");
   background-position: 95% 50%;
   background-size: 8vh;
   background-repeat: no-repeat;
-  transition: 0.2s;
+  transition: 0.4s;
   cursor: pointer;
 }
 
@@ -113,7 +129,7 @@ body {
   color: rgba(0, 0, 0, 0.4);
   padding-top: 2vh;
   cursor: pointer;
-  transition: 0.2s;
+  transition: 0.4s;
 }
 
 #index p:nth-of-type(3):hover {
@@ -131,23 +147,59 @@ body {
   align-items: flex-end;
   transition: 0.4s;
   overflow: hidden;
+  background-color: rgba(221, 221, 221, 0.5);
 }
 
 .panel {
   width: 100%;
   max-width: 600px;
   border-radius: 4vh 4vh 0 0;
-  background-color: rgba(238, 238, 238, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   padding-bottom: 4vh;
   transition: 0.4s;
   margin-bottom: -100vh;
   display: none;
 }
 
+.input {
+  width: 100%;
+  display: block;
+  margin-top: 3.5vh;
+  background-color: #f5f5f5;
+  border-radius: 2vh;
+  border: none;
+  font-size: 3.5vh;
+  padding: 2vh 0 2vh 2vh;
+  appearance: none;
+}
+
+.input::placeholder {
+  color: #aaaaaa;
+  opacity: 1;
+}
+
+.input:-ms-input-placeholder {
+  color: #aaaaaa;
+}
+
+.input::-ms-input-placeholder {
+  color: #aaaaaa;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .panel img {
   width: 6vh;
   display: block;
-  padding-top: 3.5vh;
+  padding-top: 4vh;
   cursor: pointer;
 }
 
@@ -155,13 +207,13 @@ body {
   width: 90%;
   display: block;
   margin-top: 3.5vh;
-  background-color: rgba(0, 0, 0, 0.06);
+  background-color: #f5f5f5;
   border-radius: 2vh;
   border: none;
   font-size: 3.5vh;
   padding: 2vh 0 2vh 2vh;
   appearance: none;
-  background-image: url("../img/downArrow.png");
+  background-image: url("../img/downArrow.svg");
   background-repeat: no-repeat;
   background-position: 95% 50%;
   background-size: 4vh 2vh;
